# Ai_c-_bot_psql

./: .gitignore  CMakeLists.txt  README.md  fix_includes.sh  init_database.sql  test_model.cpp  train_model.cpp
models/: nl_to_sql_model.json  seq2seq_model_nl_vocab.txt  seq2seq_model_sql_vocab.txt
src/: main.cpp
src/config/: Config.cpp  Config.h  default.conf
src/core/: Agent.cpp  Agent.h  DatabaseConnector.cpp  DatabaseConnector.h  QueryBuilder.cpp  QueryBuilder.h  ResponseParser.cpp  ResponseParser.h
src/ml/: ModelTrainer.cpp  ModelTrainer.h  Seq2SeqModel.cpp  Seq2SeqModel.h  Vocabulary.cpp  Vocabulary.h
src/nlprocessor/: ModelTrainer.cpp  ModelTrainer.h  NLProcessor.cpp  NLProcessor.h  Tokenizer.cpp  Tokenizer.h
src/utils/: Logger.cpp  Logger.h  Utilities.h
tests/: test_database.cpp  test_integration.cpp  test_querybuilder.cpp
training_data/: expand_dataset.py  nl_to_sql_train.json  queries.json  queries.json.save  train_model.cpp
